# giulio-lang

./: .gitignore  Cargo.toml  README.md  async_tests.giu  test.giu  vm_phases.txt
.github/workflows/: release.yml
src/: errors.rs  lib.rs  main.rs  parser_errors.rs  run_source.rs
src/ast/: ast.rs  mod.rs
src/compiler/: compute_slots.rs  mod.rs
src/interpreter/: constant_pool.rs  env.rs  eval.rs  eval_context.rs  mod.rs  module_registry.rs  obj.rs  type_converters.rs
src/interpreter/builtins/: array.rs  functions.rs  methods.rs  mod.rs  type.rs
src/interpreter/builtins/impls/: array.rs  float.rs  hash.rs  input.rs  int.rs  mod.rs  output.rs  shared.rs  string.rs  struct_ops.rs
src/interpreter/helpers/: data_structures.rs  eval_control_flow.rs  eval_functions.rs  eval_helpers.rs  eval_misc.rs  eval_structs.rs  expressions.rs  functions.rs  mod.rs  obj_operations.rs  type_converters.rs
src/lexer/: lexer.rs  mod.rs  token.rs
src/parser/: await_ctx_helpers.rs  mod.rs  parser.rs  parser_errors.rs  parser_helpers.rs
src/runners/: mod.rs  print_help.rs  run_check.rs  run_repl_mode.rs  run_source.rs
src/runtime/: env.rs  mod.rs  module_registry.rs  obj.rs  runtime_errors.rs
src/runtime/builtins/: functions.rs
src/runtime/helpers/: mod.rs  type_converters.rs  wasm_loader.rs
src/std/: env.rs  http.rs  io.rs  json.rs  math.rs  mod.rs  string.rs  time.rs
src/tests/: lexer_tests.rs  mod.rs  parser_tests.rs  vm_tests.rs  wasm_tests.rs
src/vm/: chunk.rs  frame.rs  instruction.rs  mod.rs  obj.rs  vm.rs
src/vm/compiler/: collections.rs  compilation_errors.rs  compute_slots.rs  constant_pool.rs  control_flow.rs  exceptions.rs  expressions.rs  functions.rs  mod.rs  statements.rs
src/vm/ops/: arithmetic.rs  calls.rs  collections.rs  exceptions.rs  modules.rs  stack_vars.rs  structs.rs
src/vm/runtime/: env.rs  mod.rs  module_registry.rs  runtime_errors.rs  type_converters.rs  wasm_loader.rs
src/wasm/: mod.rs  type_conversions.rs  wasm_runtime.rs
(+25 files in other folders)
