[package]
name = "giulio-lang"
version = "0.0.6"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Lucop1911/giulio-lang"

[package.metadata]
author = "Lucop1911"

[dependencies]
nom = "7.0.0"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.2"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.13.2", features = ["json"] }