[package]
name = "g-lang"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Lucop1911/g-lang"

[package.metadata]
author = "Lucop1911"

[[bin]]
name = "gl"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = []

[dependencies]
nom = "7.0.0"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.2"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "fs", "time", "sync", "macros"] }
futures = "0.3"
reqwest = { version = "0.13.2", features = ["rustls"] }
wasmtime = { version = "42.0.1", default-features = false, features = ["cranelift", "runtime"] }
wat = "1.0"
ahash = "0.8.12"
