[package]
name = "g-lang"
version = "2.0.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Lucop1911/g-lang"

[package.metadata]
author = "Lucop1911"

[[bin]]
name = "gl"
path = "src/main.rs"

[features]
default = ["wasm"]
wasm = []

[dependencies]
nom = "7.1.3"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.9.4"
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "fs", "time", "sync", "macros"] }
futures = "0.3"
reqwest = { version = "0.13.3", features = ["rustls"] }
wasmtime = { version = "44.0.1", default-features = false, features = ["cranelift", "runtime", "component-model"] }
ahash = "0.8.12"
wasmtime-wasi = { version = "44.0.1", features = ["p2"] }
wasmtime-wasi-http = "44.0.1"
wat = "1.248.0"

[profile.dev]
debug = 0